# datasets

./: .gitignore  CMakeLists.txt
documentation/: CMakeLists.txt
include/dataset/: dataset.h  io.h  manipulation.h  statistics.h  transformation.h  utils.h
source/: dataset.cpp  io.cpp  manipulation.cpp  statistics.cpp  transformation.cpp  utils.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: dataset.cpp
